# 3_yao_game_pt

./: .PROJECT_STATUS.md  README.md  editor.html  engine.rs  index.html  new-project.html  package-lock.json  package.json  settings.html  tree.txt  vite.config.ts  yaogame.sublime-workspace
2_game/: cargo_tauri_dev.json  index.html  package-lock.json  package.json  vite.config.ts
2_game/src-tauri/: Cargo.toml  tauri.conf.json  tree.txt
2_game/src-tauri/src/: editor.rs  f8g.rs  interpreter.rs  launcher.rs  lib.rs  main.rs  math.rs  parser.rs  register_functions.8g
2_game/src-tauri/src/8g/editor/: editor.8g
2_game/src-tauri/src/8g/launcher/: luancher.8g
2_game/src-tauri/src/assets/svg/: UI構想.af  editor_icon.af  logo.af  アイコンアセット.af
2_game/src-tauri/src/game_list_json/: game_list.json
2_game/src-tauri/src/html/: editor.html
2_game/src-tauri/src/js/: dropdown.js  editor.js  index.js
2_game/src-tauri/src/scss/: editor.scss  index.scss
2_game/src-tauri/src/scss/css3/: editor.css  index.css
3_ymtc/: warehouse.json  yamatocraft.8game
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/windows/editor/: editor.css  editor.html
src/windows/launcher/: index.html
src/windows/new-project/: new-project.css  new-project.html  new-project.js
src/windows/settings/: settings-window.css  settings-window.html  settings-window.js
