[package]
name = "yao-game"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "yao_launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yao_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
macroquad = "0.4.15"

# ... (上の内容はそのまま)

#[[bin]]
#name = "yao-game" # 実行時の名前（任意でOK）
#path = "src/main.rs" # ここを繭ちゃんのメインファイルのパスに合わせてね

# UIランチャー用
[[bin]]
name = "yao_launcher"
path = "src/launcher.rs"

# ゲームエンジン描画用
[[bin]]
name = "yao_engine"
path = "src/main.rs"

# ゲームエンジンエディタ用
[[bin]]
name = "yao_editor"
path = "src/editor.rs"
