[package]
name = "yaocudogame"
version = "0.1.0"
description = "A Tauri App"
authors = ["mayuI"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
csv = "1.4.0"
wgpu = "24.0.5"
egui = "0.29.1"
eframe = { version = "0.29.1", features = ["wgpu"] }
glam = "0.33.1"
regex = "1.12.4"
